<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/pupil_detail_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/lightAccent"
		android:layout_marginBottom="@dimen/item_spacing_md"
		app:contentInsetStartWithNavigation="0dp"
		app:layout_constraintTop_toTopOf="parent">

	</androidx.appcompat.widget.Toolbar>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/activity_horizontal_margin"
		app:layout_constraintTop_toBottomOf="@id/pupil_detail_toolbar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<de.hdodenhof.circleimageview.CircleImageView
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:id="@+id/pupil_photo_imageView"
			android:layout_gravity="center"
			android:scaleType="centerCrop"
			app:layout_constraintTop_toTopOf="@+id/content_linearLayout"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toBottomOf="@+id/content_linearLayout"
			android:src="@drawable/ic_profile_placeholder"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/item_spacing_xlg"
			android:layout_marginBottom="@dimen/item_spacing_lg"
			android:orientation="horizontal">

			<TextView
				style="@style/TextDetail"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/pupil_detail_id"/>

			<TextView
				style="@style/TextDetail"
				android:id="@+id/pupil_id_textView"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				tools:text="123"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/item_spacing_lg"

			android:orientation="horizontal">

			<TextView
				style="@style/TextDetail"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/pupil_detail_name"/>

			<TextView
				style="@style/TextDetail"
				android:id="@+id/pupil_name_textView"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				tools:text="Abigayle Quigley"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				style="@style/TextDetail"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/pupil_detail_country"/>

			<TextView
				style="@style/TextDetail"
				android:id="@+id/pupil_country_textView"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				tools:text="India"/>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/loading_linearLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:background="@android:color/black"
		android:clickable="true"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:translationZ="10dp"
		android:visibility="gone"
		android:alpha="0.6">

		<ProgressBar
			android:id="@+id/loading_progress_bar"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>

	</LinearLayout>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/edit_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_pupil"
		android:layout_marginBottom="@dimen/item_spacing_lg"
		android:layout_marginStart="@dimen/item_spacing_md"
		android:layout_marginEnd="@dimen/item_spacing_md"
		android:textSize="18sp"
		android:textColor="@color/white"
		android:background="@color/colorAccent"
		app:layout_constraintBottom_toTopOf="@+id/delete_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>


	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/delete_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/delete_pupil"
		android:layout_marginBottom="@dimen/item_spacing_md"
		android:layout_marginStart="@dimen/item_spacing_md"
		android:layout_marginEnd="@dimen/item_spacing_md"
		android:textSize="18sp"
		android:textColor="@color/white"
		android:background="@color/red_01"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>